--- a/ui/src/pages/index.astro
+++ b/ui/src/pages/index.astro
@@ -333,8 +333,10 @@ import Layout from '../layouts/Layout.astro';
         <br>
         <span class="powered-by">
           Powered by 
-          <svg viewBox="0 0 24 24" width="14" height="14" fill="currentColor" aria-hidden="true" class="cf-workers-icon">
-            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/>
+          <svg viewBox="0 0 50 50" width="18" height="18" fill="currentColor" aria-hidden="true" class="cf-workers-icon">
+            <path d="m18.63 37.418-9.645-12.9 9.592-12.533-1.852-2.527L5.917 23.595l-.015 1.808 10.86 14.542z"></path>
+            <path d="M21.997 6.503h-3.712l13.387 18.3-13.072 17.7h3.735L35.4 24.81z"></path>
+            <path d="M29.175 6.503h-3.758l13.598 18.082-13.598 17.918h3.765l12.908-17.01v-1.808z"></path>
           </svg>
           <a href="https://developers.cloudflare.com/workers/" target="_blank" rel="noopener">Cloudflare Workers</a>
         </span>
